# docstream

./: .dockerignore  .dvignore  .gitignore  Dockerfile  app.py  bun.lockb  devbox.json  index.html  model.py  package.json  pixi.toml  postcss.config.cjs  pyproject.toml  start.sh  svelte.config.js  undefined.json  vite.config.js
.devcontainer/: devcontainer.json
.diversion/: dv.ws.7556c999-9a8c-4dd4-a223-28e1c7d9b414
.github/workflows/: docker-publish.yml
src/: app.html
src/lib/: Blip.svelte  Div.svelte  Mine.svelte  Theirs.svelte  common.js
src/routes/api/doc/[id]/: +server.js
src/routes/doc/[id]/: +page.js  +page.svelte
src/routes/doc/[slug]/: +page.server.js  +page.svelte
svelte/: Blip.svelte  Mine.svelte  Page.svelte  Theirs.svelte  common.js
templates/: index.html
templates/assets/: index-aa875063.js  index-e984d828.js
