[tool.poetry]
name = "docstream"
version = "0.1.0"
description = ""
authors = ["V <nandithebull@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
flask-cors = "^4.0.0"
flask-socketio = "^5.3.6"
emmett = "^2.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
